<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie News</string>
    <string name="key">ad83894ead3e1348a6d86dc37abfd695</string>
    <string name="accessToken">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJhZDgzODk0ZWFkM2UxMzQ4YTZkODZkYzM3YWJmZDY5NSIsInN1YiI6IjU5YTUwNDljOTI1MTQxMmY1ODAwMmE1ZCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.gw0ORlHwYPisdHgFhL6VeWcRlXSXW55V0oQB56P18Q4</string>
    <string name="notification">notification</string>
    <string name="hot_star">hotStar</string>
    <string name="movie_news">豆豆影讯</string>
    <string name="search">search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="loading">Loading.....</string>
    <string name="overview">overview</string>
    <string name="abuout">about</string>
    <string name="movie">movie</string>
    <string name="TV">TV</string>
    <string name="seting">setting</string>
    <string name="movie_logo">logo</string>
    <string name="synopsis">Synopsis:</string>
    <string name="budget">Budget:</string>
    <string name="genre">Genre:</string>
    <string name="release_date">Release date:</string>
    <string name="run_time">Runtime:</string>
    <string name="certification">Certification</string>
    <string name="similar">Similar:</string>
    <string name="revenue">Revenue:</string>
    <string name="language">en-US</string>
    <string name="language_set">language</string>
    <string name="auto">Auto</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="action">Action</string>
    <string name="adventrue">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="clear">Clear</string>
    <string name="not_comments">Not comments</string>
    <string name="share">Share</string>

    <string-array name="play_type">
        <item>TopRated</item>
        <item>Popular</item>
        <item>NowPlaying</item>
        <item>Upcomiing</item>
    </string-array>

    <string-array name="search_type">
        <item>movie</item>
        <item>pople</item>
    </string-array>

    <string-array name="movie_info_tab">
        <item>OverView</item>
        <item>Cast</item>
        <item>Review</item>
    </string-array>

    <string-array name="cast_info_tab">
        <item>bio</item>
        <item>as actor</item>
    </string-array>
</resources>